UtahLiveDataTest/src/objects/POC_ApplicationBatch__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentUrl__c</fullName>
        <label>AttachmentUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POC_AwardBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UploadedDateandTime__c</fullName>
        <label>Uploaded Date</label>
        <type>DateTime</type>
    </fields>
    <label>POC_ApplicationBatch</label>
    <nameField>
        <label>POC_ApplicationBatch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC_ApplicationBatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>